--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,80 @@
   box-sizing: border-box;
 }
 
+@keyframes colorswag {
+  100% {
+    color: #022050;
+  }
+}
+@keyframes popup {
+  50% {
+    color: #ff0ace;
+  }
+  100% {
+    color: #e9ebf8;
+  }
+}
+@keyframes popup2 {
+  100% {
+    color: #ff0ace;
+  }
+}
+b:nth-child(1) {
+  animation: colorswag 2s 0.05s 2;
+}
+
+b:nth-child(2) {
+  animation: colorswag 2s 0.1s 2;
+}
+
+b:nth-child(3) {
+  animation: colorswag 2s 0.15s 2;
+}
+
+b:nth-child(4) {
+  animation: colorswag 2s 0.2s 2;
+}
+
+b:nth-child(5) {
+  animation: colorswag 2s 0.25s 2;
+}
+
+b:nth-child(6) {
+  animation: colorswag 2s 0.3s 2;
+}
+
+b:nth-child(7) {
+  animation: colorswag 2s 0.35s 2;
+}
+
+b:nth-child(8) {
+  animation: colorswag 2s 0.4s 2;
+}
+
+b:nth-child(9) {
+  animation: colorswag 2s 0.45s 2;
+}
+
+b:nth-child(10) {
+  animation: colorswag 2s 0.5s 2;
+}
+
+b:nth-child(11) {
+  animation: colorswag 2s 0.55s 2;
+}
+
+b:nth-child(12) {
+  animation: colorswag 2s 0.6s 2;
+}
+
+b:nth-child(13) {
+  animation: colorswag 2s 0.65s 2;
+}
+
+b:nth-child(14) {
+  animation: colorswag 2s 0.7s 2;
+}
+
 body {
   background-image: url(../img/bg.jpeg);
   background-position: bottom;
@@ -11,7 +85,6 @@ body {
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
-  height: 100vh;
   font-family: "Kanit", sans-serif;
   color: #e9ebf8;
 }
@@ -41,7 +114,7 @@ body {
   text-align: center;
   width: 10vw;
   border-bottom: 1px solid #e9ebf8;
-  padding: 2em;
+  padding: 2em 0.5em;
 }
 .navbar .nav-main li a {
   text-decoration: none;
@@ -96,11 +169,7 @@ main {
   padding-right: 8em;
 }
 .home span {
-  color: #ff0ace;
-  display: inline-block;
-}
-.home span:hover {
-  animation: shake 0.5s 2;
+  color: transparent;
 }
 .home h2 {
   font-size: 4em;
@@ -117,49 +186,38 @@ main {
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
-
-b:nth-child(1) {
-  animation: colorswag 2s 0.05s 2;
+.home span:nth-child(1) {
+  animation: popup2 1s 0.1s forwards;
 }
-
-b:nth-child(2) {
-  animation: colorswag 2s 0.1s 2;
+.home span:nth-child(2) {
+  animation: popup2 1s 0.2s forwards;
 }
-
-b:nth-child(3) {
-  animation: colorswag 2s 0.15s 2;
+.home span:nth-child(3) {
+  animation: popup2 1s 0.3s forwards;
 }
-
-b:nth-child(4) {
-  animation: colorswag 2s 0.2s 2;
+.home span:nth-child(4) {
+  animation: popup2 1s 0.4s forwards;
 }
-
-b:nth-child(5) {
-  animation: colorswag 2s 0.25s 2;
+.home span:nth-child(5) {
+  animation: popup2 1s 0.5s forwards;
 }
-
-b:nth-child(6) {
-  animation: colorswag 2s 0.3s 2;
+.home span:nth-child(6) {
+  animation: popup2 1s 0.6s forwards;
 }
-
-b:nth-child(7) {
-  animation: colorswag 2s 0.35s 2;
+.home span:nth-child(7) {
+  animation: popup2 1s 0.7s forwards;
 }
-
-b:nth-child(8) {
-  animation: colorswag 2s 0.4s 2;
+.home span:nth-child(8) {
+  animation: popup2 1s 0.8s forwards;
 }
-
-b:nth-child(9) {
-  animation: colorswag 2s 0.45s 2;
+.home span:nth-child(9) {
+  animation: popup2 1s 0.9s forwards;
 }
-
-b:nth-child(10) {
-  animation: colorswag 2s 0.5s 2;
+.home span:nth-child(10) {
+  animation: popup2 1s 1s forwards;
 }
-
-b:nth-child(11) {
-  animation: colorswag 2s 0.55s 2;
+.home span:nth-child(11) {
+  animation: popup2 1s 1.1s forwards;
 }
 
 .hover-line {
@@ -196,46 +254,6 @@ b:nth-child(11) {
   left: initial;
 }
 
-@keyframes shake {
-  0% {
-    transform: translate(1px, 1px) rotate(0deg);
-  }
-  10% {
-    transform: translate(-1px, -2px) rotate(-1deg);
-  }
-  20% {
-    transform: translate(-2px, 0px) rotate(1deg);
-  }
-  30% {
-    transform: translate(2px, 2px) rotate(0deg);
-  }
-  40% {
-    transform: translate(1px, -1px) rotate(1deg);
-  }
-  50% {
-    transform: translate(-1px, 2px) rotate(-1deg);
-  }
-  60% {
-    transform: translate(-2px, 1px) rotate(0deg);
-  }
-  70% {
-    transform: translate(2px, 1px) rotate(-1deg);
-  }
-  80% {
-    transform: translate(-1px, -1px) rotate(1deg);
-  }
-  90% {
-    transform: translate(1px, 2px) rotate(0deg);
-  }
-  100% {
-    transform: translate(1px, -2px) rotate(-1deg);
-  }
-}
-@keyframes colorswag {
-  100% {
-    color: #022050;
-  }
-}
 .contactme {
   padding: 1em 2em;
   border: 1px solid rgba(233, 235, 248, 0.5019607843);
@@ -274,120 +292,170 @@ b:nth-child(11) {
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
+.about-head a {
+  text-decoration: none;
+}
+.about-head span {
+  color: transparent;
+}
+.about-head span:nth-child(1) {
+  animation: popup 1s 0.1s forwards;
+}
+.about-head span:nth-child(2) {
+  animation: popup 1s 0.2s forwards;
+}
+.about-head span:nth-child(3) {
+  animation: popup 1s 0.3s forwards;
+}
+.about-head span:nth-child(4) {
+  animation: popup 1s 0.4s forwards;
+}
+.about-head span:nth-child(5) {
+  animation: popup 1s 0.5s forwards;
+}
+.about-head span:nth-child(6) {
+  animation: popup 1s 0.6s forwards;
+}
+.about-head span:nth-child(7) {
+  animation: popup 1s 0.7s forwards;
+}
+.about-head span:nth-child(8) {
+  animation: popup 1s 0.8s forwards;
+}
+.about-head span:nth-child(9) {
+  animation: popup 1s 0.9s forwards;
+}
+.about-head span:nth-child(10) {
+  animation: popup 1s 1s forwards;
+}
+.about-head span:nth-child(11) {
+  animation: popup 1s 1.1s forwards;
+}
+.about-head span:nth-child(12) {
+  animation: popup 1s 1.2s forwards;
+}
+.about-head span:nth-child(13) {
+  animation: popup 1s 1.3s forwards;
+}
+.about-head span:nth-child(14) {
+  animation: popup 1s 1.4s forwards;
+}
+.about-head span:nth-child(15) {
+  animation: popup 1s 1.5s forwards;
+}
+.about-head span:nth-child(16) {
+  animation: popup 1s 1.6s forwards;
+}
 
-.about-container {
+.container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 2em;
   padding: 2em;
+  height: 100vh;
 }
-.about-container .about {
+.container .content-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 1em;
+  flex-wrap: wrap;
+}
+.container .about {
   flex-direction: column;
   justify-content: center;
-  padding: 1em;
+  height: auto;
+  width: 15em;
+  padding: 0.5em;
   font-size: 1.5em;
-  height: 75vh;
   border: 1px solid rgba(233, 235, 248, 0.5019607843);
   background-color: rgba(0, 0, 0, 0.3568627451);
   border-radius: 0.5em;
   -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
-.about-container .about p {
+.container .about p {
   padding: 0.5em;
 }
-.about-container .about p:before {
+.container .about p:before {
   content: "<p> ";
   font-size: 0.5em;
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
-.about-container .about p:after {
+.container .about p:after {
   content: " </p>";
   font-size: 0.5em;
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
-.about-container .about span {
+.container .about span {
   color: transparent;
 }
-.about-container .about span:nth-child(1) {
+.container .about span:nth-child(1) {
   animation: popup 1s 0.1s forwards;
 }
-.about-container .about span:nth-child(2) {
+.container .about span:nth-child(2) {
   animation: popup 1s 0.2s forwards;
 }
-.about-container .about span:nth-child(3) {
+.container .about span:nth-child(3) {
   animation: popup 1s 0.3s forwards;
 }
-.about-container .about span:nth-child(4) {
+.container .about span:nth-child(4) {
   animation: popup 1s 0.4s forwards;
 }
-.about-container .about span:nth-child(5) {
+.container .about span:nth-child(5) {
   animation: popup 1s 0.5s forwards;
 }
-.about-container .about span:nth-child(6) {
+.container .about span:nth-child(6) {
   animation: popup 1s 0.6s forwards;
 }
-.about-container .about span:nth-child(7) {
+.container .about span:nth-child(7) {
   animation: popup 1s 0.7s forwards;
 }
-.about-container .about span:nth-child(8) {
+.container .about span:nth-child(8) {
   animation: popup 1s 0.8s forwards;
 }
-.about-container .about span:nth-child(9) {
+.container .about span:nth-child(9) {
   animation: popup 1s 0.9s forwards;
 }
-.about-container .about span:nth-child(10) {
+.container .about span:nth-child(10) {
   animation: popup 1s 1s forwards;
 }
-.about-container .about span:nth-child(11) {
+.container .about span:nth-child(11) {
   animation: popup 1s 1.1s forwards;
 }
-.about-container .about span:nth-child(12) {
+.container .about span:nth-child(12) {
   animation: popup 1s 1.2s forwards;
 }
-.about-container .about span:nth-child(13) {
+.container .about span:nth-child(13) {
   animation: popup 1s 1.3s forwards;
 }
-.about-container .about span:nth-child(14) {
+.container .about span:nth-child(14) {
   animation: popup 1s 1.4s forwards;
 }
-.about-container .about span:nth-child(15) {
+.container .about span:nth-child(15) {
   animation: popup 1s 1.5s forwards;
 }
-.about-container .about span:nth-child(16) {
+.container .about span:nth-child(16) {
   animation: popup 1s 1.6s forwards;
 }
-.about-container .about h2:before {
+.container .about h2:before {
   content: "<h2> ";
   font-size: 0.5em;
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
-.about-container .about h2:after {
+.container .about h2:after {
   content: " </h2>";
   font-size: 0.5em;
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
 
-footer .about-head {
-  position: fixed;
-  bottom: 0;
-  left: 10vw;
-  width: 90%;
-}
-
-@keyframes popup {
-  50% {
-    color: #ff0ace;
-  }
-  100% {
-    color: #e9ebf8;
-  }
-}
 .skills {
   display: flex;
   justify-content: space-around;
@@ -417,6 +485,7 @@ footer .about-head {
   transition: transform 0.8s;
   border-radius: 0.5em;
   border: 1px solid rgba(233, 235, 248, 0.5019607843);
+  background-color: rgba(0, 0, 0, 0.3568627451);
   -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
@@ -431,25 +500,25 @@ footer .about-head {
 }
 .skills .card .front h2:before {
   content: "<h2> ";
-  font-size: 0.5em;
+  font-size: 0.75em;
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
 .skills .card .front h2:after {
   content: " </h2>";
-  font-size: 0.5em;
+  font-size: 0.75em;
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
 .skills .card .front h3:before {
   content: "<h3> ";
-  font-size: 0.5em;
+  font-size: 0.75em;
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
 .skills .card .front h3:after {
   content: " </h3>";
-  font-size: 0.5em;
+  font-size: 0.75em;
   font-family: "VT323", monospace;
   color: rgba(233, 235, 248, 0.5019607843);
 }
@@ -544,13 +613,6 @@ footer .about-head {
   color: rgba(233, 235, 248, 0.5019607843);
 }
 
-footer .skills-head {
-  position: fixed;
-  bottom: 0;
-  left: 10vw;
-  width: 90%;
-}
-
 .work-head {
   text-align: center;
   font-size: 3em;
@@ -571,38 +633,104 @@ footer .skills-head {
 
 .work-container {
   display: flex;
-  padding: 2em;
+  width: 100%;
+  height: 80%;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1em;
+  overflow: hidden;
 }
-
-footer .work-head {
-  position: fixed;
-  bottom: 0;
-  left: 10vw;
-  width: 90%;
+.work-container .work {
+  padding: 0.5em;
+  width: 375px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.3568627451);
+  border-radius: 0.5em;
+  border: 1px solid rgba(233, 235, 248, 0.5019607843);
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+}
+.work-container .work img {
+  width: 350px;
+  height: auto;
+  object-fit: contain;
+  margin: 1em 0;
+}
+.work-container .work h2:before {
+  content: "<h2> ";
+  font-size: 0.75em;
+  font-family: "VT323", monospace;
+  color: rgba(233, 235, 248, 0.5019607843);
+}
+.work-container .work h2:after {
+  content: " </h2>";
+  font-size: 0.75em;
+  font-family: "VT323", monospace;
+  color: rgba(233, 235, 248, 0.5019607843);
+}
+.work-container .work a {
+  text-decoration: none;
+  color: #e9ebf8;
+  font-size: larger;
+  margin: 0.5em;
+  transition: 0.25s;
+  border-bottom: 1px solid rgba(233, 235, 248, 0.5019607843);
+}
+.work-container .work a:before {
+  content: "<a> ";
+  font-size: 0.75em;
+  font-family: "VT323", monospace;
+  color: rgba(233, 235, 248, 0.5019607843);
+}
+.work-container .work a:after {
+  content: " </a>";
+  font-size: 0.75em;
+  font-family: "VT323", monospace;
+  color: rgba(233, 235, 248, 0.5019607843);
+}
+.work-container .work a:hover {
+  color: #ff0ace;
+}
+.work-container .work p:before {
+  content: "<p> ";
+  font-size: 0.75em;
+  font-family: "VT323", monospace;
+  color: rgba(233, 235, 248, 0.5019607843);
+}
+.work-container .work p:after {
+  content: " </p>";
+  font-size: 0.75em;
+  font-family: "VT323", monospace;
+  color: rgba(233, 235, 248, 0.5019607843);
 }
 
 .contact {
   display: flex;
+  width: 100%;
+  flex-direction: row;
   justify-content: space-around;
   padding: 1em;
+  gap: 1em;
 }
 .contact .contactcontainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 0.5em;
+  display: grid;
   padding: 0.5em;
+  height: 575px;
+  width: 600px;
   border: 1px solid rgba(233, 235, 248, 0.5019607843);
   -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   border-radius: 0.5em;
-  width: 35vw;
   background-color: rgba(0, 0, 0, 0.3568627451);
 }
 .contact .contactcontainer form {
   display: grid;
-  grid-template-columns: 3fr 5fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 0.5fr 0.5fr 1fr;
   grid-template-areas: "name email" "betreff betreff" "nachricht nachricht" "button button";
   grid-column-gap: 1em;
@@ -672,8 +800,8 @@ footer .work-head {
   font-family: "Kanit", sans-serif;
 }
 .contact .iframe iframe {
-  height: 76.5vh;
-  width: 35vw;
+  height: 575px;
+  width: 600px;
   border-radius: 0.5em;
   border: 1px solid rgba(233, 235, 248, 0.5019607843);
   -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
@@ -701,8 +829,8 @@ footer .work-head {
 footer .contact-foot {
   text-align: center;
   font-size: 3em;
+  position: absolute;
   padding: 0.5rem;
-  position: fixed;
   font-size: 1.5em;
   font-weight: lighter;
   bottom: 0;
@@ -723,4 +851,211 @@ footer .contact-foot:after {
 }
 footer .contact-foot .fa-regular {
   font-size: 0.75em;
+}
+
+@media screen and (max-width: 1600px) {
+  body {
+    background-position: center;
+    position: relative;
+    z-index: 1;
+  }
+  main {
+    padding-top: 12.5vh;
+    position: initial;
+    left: initial;
+    height: initial;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+  }
+  .home,
+  .about,
+  .skills,
+  .work,
+  .contact {
+    height: auto;
+    width: 100%;
+  }
+  .navbar {
+    width: 100%;
+    height: auto;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    z-index: 2;
+    justify-content: space-between;
+    background-color: #202020;
+    background-image: linear-gradient(to right, rgba(2, 32, 80, 0.5019607843), rgba(23, 41, 96, 0.5019607843), rgba(40, 50, 112, 0.5019607843), rgba(58, 59, 128, 0.5019607843), rgba(76, 68, 144, 0.5019607843), rgba(94, 72, 158, 0.5019607843), rgba(113, 76, 172, 0.5019607843), rgba(134, 79, 184, 0.5019607843), rgba(162, 75, 195, 0.5019607843), rgba(192, 66, 202, 0.5019607843), rgba(223, 51, 206, 0.5019607843), rgba(255, 10, 206, 0.5019607843));
+  }
+  .navbar .nav-main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .navbar .nav-main li {
+    list-style-type: none;
+    text-align: center;
+    width: auto;
+    border-bottom: none;
+    padding: 1em;
+  }
+  .navbar .nav-logo {
+    width: 10vw;
+    height: auto;
+    border-bottom: none;
+  }
+  .navbar .nav-contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    padding: 1em;
+  }
+  .navbar .nav-contact .fa-brands {
+    font-size: 2em;
+    padding: 0.25em;
+    color: #e9ebf8;
+  }
+  .homecontainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .home {
+    padding-right: 0;
+    position: relative;
+    padding: 2em;
+    align-items: start;
+    justify-content: center;
+    height: 100%;
+    padding-right: 0;
+    color: #e9ebf8;
+  }
+  .home span {
+    color: #ff0ace;
+    display: inline-block;
+  }
+  .home span:hover {
+    animation: none;
+  }
+  .home h2 {
+    font-size: 3em;
+  }
+  .contactme {
+    margin: 1em 0 1em 1em;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    align-self: flex-start;
+    transition: 0.25s;
+    -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  }
+  .contactme:hover {
+    color: #ff0ace;
+    border-color: #ff0ace;
+  }
+  .contactme:active {
+    transform: translateY(2px) translateX(2px);
+    box-shadow: none;
+  }
+  .container {
+    gap: 1em;
+    padding: 1em;
+    height: auto;
+  }
+  .container .content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 1em;
+    flex-wrap: wrap;
+  }
+  .container .content-container .about {
+    width: auto;
+  }
+  .work-container {
+    flex-wrap: wrap;
+  }
+  .work-container .hidden {
+    display: none;
+  }
+  .contact {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em;
+    gap: 1em;
+  }
+  .contact .contactcontainer {
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+  }
+  .contact .contactcontainer form {
+    display: grid;
+    grid-template-columns: 550px;
+    grid-template-rows: 0.5fr 0.5fr 0.5fr 1fr 0.5fr;
+    grid-template-areas: "name" "email" "betreff" "nachricht" "button";
+    grid-column-gap: 0;
+  }
+  .contact .contactcontainer .button {
+    padding: 0.5em 1em;
+    border: 1px solid rgba(233, 235, 248, 0.5019607843);
+    border-radius: 0.5em;
+    color: #e9ebf8;
+    text-decoration: none;
+    cursor: pointer;
+    transition: 0.25s;
+  }
+  .contact .contactcontainer input,
+  .contact .contactcontainer textarea {
+    margin-top: 0.5em;
+    padding: 0.25em;
+  }
+  .iframe iframe {
+    display: none;
+  }
+}
+@media screen and (min-width: 300px) and (max-width: 1024px) {
+  body {
+    font-size: 0.8em;
+  }
+  main {
+    padding-top: 20vh;
+  }
+  .navbar .nav-main {
+    flex-direction: column;
+    padding: 0;
+  }
+  .navbar .nav-main li {
+    padding: 0;
+  }
+  .navbar .nav-logo {
+    width: 25vw;
+  }
+  .navbar .nav-contact {
+    flex-direction: column;
+  }
+  .navbar .nav-contact .fa-brands {
+    font-size: 1.5em;
+  }
+  .home {
+    justify-content: center;
+    align-items: flex-start;
+    padding-right: 0;
+  }
+  .home h2 {
+    font-size: 1.5em;
+  }
+  .contact .contactcontainer form {
+    grid-template-columns: 375px;
+  }
 }
