--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1055,7 +1055,11 @@ footer .contact-foot .fa-regular {
   .home h2 {
     font-size: 1.5em;
   }
+  .contact .contactcontainer {
+    padding: 0.5em;
+  }
   .contact .contactcontainer form {
+    padding: 1em;
     grid-template-columns: 350px;
   }
 }
