--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -975,9 +975,9 @@ footer .contact-foot {
   }
   .contact {
     .contactcontainer {
-
+      padding: 0.5em;
       form {
-
+        padding: 1em;
         grid-template-columns: 350px;
 }
     }
