--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -905,7 +905,6 @@ footer .contact-foot {
       height: 100%;
       padding: 1em;
       form {
-        display: grid;
         grid-template-columns: 550px;
         grid-template-rows: 0.5fr 0.5fr 0.5fr 1fr 0.5fr;
         grid-template-areas:
@@ -940,7 +939,7 @@ footer .contact-foot {
   }
 }
 
-@media screen and (min-width: 300px) and (max-width: 1024px) {
+@media screen and (min-width: 100px) and (max-width: 1024px) {
   body {
     font-size: 0.8em;
   }
@@ -976,8 +975,9 @@ footer .contact-foot {
   .contact {
     .contactcontainer {
       padding: 0.5em;
+      font-size: 1.25em;
       form {
-        padding: 1em;
+        padding: 0.5em;
         grid-template-columns: 350px;
 }
     }
