--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -353,7 +353,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   gap: 2em;
   padding: 2em;
   height: 100vh;
