--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -232,7 +232,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   gap: 2em;
   padding: 2em;
   height: 100vh;
@@ -589,6 +589,7 @@ align-items: center;
   width: 100%;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
   padding: 1em;
   gap: 1em;
 .contactcontainer {
