--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,6 +26,17 @@
     text-shadow: 1px 1px 2px rgba(233, 235, 248, 0.5019607843);
   }
 }
+@keyframes breathing {
+  25% {
+    transform: scale(0.9);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(0.9);
+  }
+}
 b:nth-child(1) {
   animation: colorswag 2s 0.05s 2;
 }
@@ -270,12 +281,14 @@ main {
   align-self: self-end;
   margin: 1em 0;
   transition: 0.25s;
+  animation: breathing 8s infinite;
   -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
 .contactme:hover {
   color: #ff0ace;
   border-color: #ff0ace;
+  animation-play-state: paused;
 }
 .contactme:active {
   transform: translateY(2px) translateX(2px);
