--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -181,6 +181,7 @@ main {
 font-size: 1.25em;
   padding: 1em 2em;
   border: 1px solid $font-shade;
+  background-color: #ffffff28;
   border-radius: 0.5em;
   color: $font-col;
   text-decoration: none;
